fix: ResizableWrapper handle z-index

--- a/packages/pocket/src/resizable-wrapper/ResizableWrapper.less
+++ b/packages/pocket/src/resizable-wrapper/ResizableWrapper.less
@@ -8,7 +8,7 @@
     }
 
     &drag-handle {
-
+      z-index: 1;
     }
 
     &handle-vertical,
@@ -19,12 +19,12 @@
       transition: opacity 500ms;
 
 
-
       &:hover, &.@{prefix}-dragging {
         transition-delay: 500ms;
         opacity: 1;
       }
-      &:active{
+
+      &:active {
         transition: opacity 100ms;
         transition-delay: 0ms;
       }
